--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,15 @@
     <version>0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-</project>
+    <modules>
+        <module>fixture-parent</module>
+        <!--<module>fixture-annotation</module>-->
+        <!--<module>fixture-aspect</module>-->
+        <!--<module>fixture-data</module>-->
+        <!--<module>fixture-service</module>-->
+        <!--<module>fixture-security</module>-->
+        <!--<module>fixture-admin</module>-->
+        <!--<module>fixture-web</module>-->
+    </modules>
 
+</project>
