--- a/fixture-parent/pom.xml
+++ b/fixture-parent/pom.xml
@@ -10,6 +10,10 @@
     <version>0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <prerequisites>
+        <maven>3.0.5</maven>
+    </prerequisites>
+
     <build>
         <pluginManagement>
             <plugins>
