--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <modules>
         <module>fixture-parent</module>
-        <!--<module>fixture-annotation</module>-->
+        <module>fixture-annotation</module>
         <!--<module>fixture-aspect</module>-->
         <!--<module>fixture-data</module>-->
         <!--<module>fixture-service</module>-->
