Added fixture-aspect and logging aspects

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <modules>
         <module>fixture-parent</module>
         <module>fixture-annotation</module>
-        <!--<module>fixture-aspect</module>-->
+        <module>fixture-aspect</module>
         <!--<module>fixture-data</module>-->
         <!--<module>fixture-service</module>-->
         <!--<module>fixture-security</module>-->
