--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <module>fixture-parent</module>
         <module>fixture-annotation</module>
         <module>fixture-aspect</module>
-        <!--<module>fixture-data</module>-->
+        <module>fixture-data</module>
         <!--<module>fixture-service</module>-->
         <!--<module>fixture-security</module>-->
         <!--<module>fixture-admin</module>-->
