--- a/fixture-parent/pom.xml
+++ b/fixture-parent/pom.xml
@@ -274,6 +274,11 @@
                 <version>${c3p0.version}</version>
             </dependency>
             <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>${servlet-api.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
@@ -331,7 +336,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-asm</artifactId>
-                <version>3.1.4.RELEASE</version>
+                <version>${spring-asm.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -361,6 +366,16 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
+                <artifactId>spring-expression</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
                 <artifactId>spring-orm</artifactId>
                 <version>${spring.version}</version>
             </dependency>
@@ -375,6 +390,11 @@
                 <version>${spring.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-commons</artifactId>
                 <version>${spring-data-commons.version}</version>
@@ -384,13 +404,28 @@
                 <artifactId>spring-data-jpa</artifactId>
                 <version>${spring-data-jpa.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-config</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-core</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-web</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <properties>
         <!-- Plugin versions -->
         <aspectj-maven-plugin.version>1.4</aspectj-maven-plugin.version>
-        <kotlin-maven-plugin.version>0.5.742</kotlin-maven-plugin.version>
+        <kotlin-maven-plugin.version>0.5.748</kotlin-maven-plugin.version>
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
@@ -410,13 +445,17 @@
         <hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
         <jboss-logging.version>3.1.3.GA</jboss-logging.version>
         <junit.version>4.11</junit.version>
-        <kotlin.version>0.5.742</kotlin.version>
+        <kotlin.version>0.5.748</kotlin.version>
         <liquibase.version>2.0.5</liquibase.version>
         <logback.version>1.0.13</logback.version>
+        <servlet-api.version>2.5</servlet-api.version>
         <slf4j-api.version>1.7.5</slf4j-api.version>
         <spring.version>3.2.3.RELEASE</spring.version>
+        <!-- TODO Find out if this is necessary, and why it's out of sync -->
+        <spring-asm.version>3.1.4.RELEASE</spring-asm.version>
         <spring-data-commons.version>1.5.1.RELEASE</spring-data-commons.version>
         <spring-data-jpa.version>1.3.2.RELEASE</spring-data-jpa.version>
+        <spring-security.version>3.1.4.RELEASE</spring-security.version>
     </properties>
 
 </project>
