--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
         <module>fixture-annotation</module>
         <module>fixture-aspect</module>
         <module>fixture-data</module>
+        <module>fixture-security</module>
         <!--<module>fixture-service</module>-->
-        <!--<module>fixture-security</module>-->
         <!--<module>fixture-admin</module>-->
         <!--<module>fixture-web</module>-->
     </modules>
