--- a/fixture-security/pom.xml
+++ b/fixture-security/pom.xml
@@ -20,6 +20,18 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
+                <configuration>
+                    <aspectLibraries>
+                        <aspectLibrary>
+                            <groupId>io.fixture</groupId>
+                            <artifactId>fixture-aspect</artifactId>
+                        </aspectLibrary>
+                        <aspectLibrary>
+                            <groupId>org.springframework</groupId>
+                            <artifactId>spring-aspects</artifactId>
+                        </aspectLibrary>
+                    </aspectLibraries>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
@@ -31,7 +43,6 @@
                 <configuration>
                     <usedDependencies>
                         <usedDependency>io.fixture:fixture-annotation</usedDependency>
-                        <usedDependency>io.fixture:fixture-aspect</usedDependency>
                         <usedDependency>com.h2database:h2</usedDependency>
                         <usedDependency>javax.servlet:servlet-api</usedDependency>
                         <usedDependency>org.springframework.security:spring-security-config</usedDependency>
@@ -74,12 +85,20 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-runtime</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
