--- a/fixture-parent/pom.xml
+++ b/fixture-parent/pom.xml
@@ -155,6 +155,35 @@
                     <version>${maven-surefire-plugin.version}</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>${maven-war-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat7-maven-plugin</artifactId>
+                    <version>${tomcat7-maven-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>run</goal>
+                            </goals>
+                            <phase>pre-integration-test</phase>
+                            <configuration>
+                                <fork>true</fork>
+                                <useTestClasspath>true</useTestClasspath>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>shutdown</id>
+                            <goals>
+                                <goal>shutdown</goal>
+                            </goals>
+                            <phase>post-integration-test</phase>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>aspectj-maven-plugin</artifactId>
                     <version>${aspectj-maven-plugin.version}</version>
@@ -275,6 +304,11 @@
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
+                <artifactId>jstl</artifactId>
+                <version>${jstl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
                 <version>${servlet-api.version}</version>
             </dependency>
@@ -282,6 +316,11 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tiles</groupId>
+                <artifactId>tiles-jsp</artifactId>
+                <version>${tiles.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.aspectj</groupId>
@@ -329,6 +368,11 @@
                 <version>${slf4j-api.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl-over-slf4j</artifactId>
+                <version>${slf4j-api.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-aop</artifactId>
                 <version>${spring.version}</version>
@@ -342,6 +386,12 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-aspects</artifactId>
                 <version>${spring.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -395,6 +445,11 @@
                 <version>${spring.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-commons</artifactId>
                 <version>${spring-data-commons.version}</version>
@@ -419,6 +474,32 @@
                 <artifactId>spring-security-web</artifactId>
                 <version>${spring-security.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>bootswatch</artifactId>
+                <version>${bootswatch.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>font-awesome</artifactId>
+                <version>${font-awesome.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>bootstrap</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>html5shiv</artifactId>
+                <version>${html5shiv.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>jquery</artifactId>
+                <version>${jquery.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -436,14 +517,21 @@
         <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
         <maven-site-plugin.version>3.2</maven-site-plugin.version>
         <maven-surefire-plugin.version>2.14.1</maven-surefire-plugin.version>
+        <maven-war-plugin.version>2.3</maven-war-plugin.version>
+        <tomcat7-maven-plugin.version>2.1</tomcat7-maven-plugin.version>
 
         <!-- Dependency versions -->
         <aspectj.version>1.7.2</aspectj.version>
+        <bootswatch.version>2.3.1</bootswatch.version>
         <c3p0.version>0.9.2.1</c3p0.version>
+        <font-awesome.version>3.1.1-1</font-awesome.version>
         <h2.version>1.3.172</h2.version>
         <hibernate.version>4.2.2.Final</hibernate.version>
         <hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
+        <html5shiv.version>3.6.2</html5shiv.version>
         <jboss-logging.version>3.1.3.GA</jboss-logging.version>
+        <jquery.version>2.0.0</jquery.version>
+        <jstl.version>1.2</jstl.version>
         <junit.version>4.11</junit.version>
         <kotlin.version>0.5.748</kotlin.version>
         <liquibase.version>2.0.5</liquibase.version>
@@ -456,6 +544,7 @@
         <spring-data-commons.version>1.5.1.RELEASE</spring-data-commons.version>
         <spring-data-jpa.version>1.3.2.RELEASE</spring-data-jpa.version>
         <spring-security.version>3.1.4.RELEASE</spring-security.version>
+        <tiles.version>3.0.1</tiles.version>
     </properties>
 
 </project>
