--- a/fixture-web/pom.xml
+++ b/fixture-web/pom.xml
@@ -23,8 +23,8 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <configuration>
                     <usedDependencies>
-                        <usedDependency>com.h2database:h2</usedDependency>
                         <usedDependency>io.fixture:fixture-annotation</usedDependency>
+                        <usedDependency>io.fixture:fixture-data-test</usedDependency>
                         <usedDependency>io.fixture:fixture-security</usedDependency>
                         <usedDependency>javax.servlet:jstl</usedDependency>
                         <usedDependency>org.apache.tiles:tiles-jsp</usedDependency>
@@ -72,13 +72,14 @@
         </dependency>
         <dependency>
             <groupId>io.fixture</groupId>
-            <artifactId>fixture-security</artifactId>
+            <artifactId>fixture-data-test</artifactId>
             <version>0.1-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>test</scope>
+            <groupId>io.fixture</groupId>
+            <artifactId>fixture-security</artifactId>
+            <version>0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
