--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
     <version>0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <prerequisites>
+        <maven>3.0.5</maven>
+    </prerequisites>
+
     <modules>
         <module>fixture-parent</module>
         <module>fixture-annotation</module>
@@ -20,5 +24,11 @@
         <module>fixture-web</module>
         <module>fixture-feature</module>
     </modules>
+
+    <properties>
+        <!-- Project properties -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
 
 </project>
