--- a/fixture-parent/pom.xml
+++ b/fixture-parent/pom.xml
@@ -593,7 +593,7 @@
         <bootswatch.version>2.3.1</bootswatch.version>
         <c3p0.version>0.9.2.1</c3p0.version>
         <cucumber.version>1.1.3</cucumber.version>
-        <!-- TODO Remove this when cucumber >= 1.1.3 -->
+        <!-- TODO Remove this when cucumber > 1.1.3 -->
         <cucumber-html.version>0.2.3</cucumber-html.version>
         <font-awesome.version>3.1.1-1</font-awesome.version>
         <h2.version>1.3.172</h2.version>
