--- a/fixture-data/pom.xml
+++ b/fixture-data/pom.xml
@@ -25,6 +25,7 @@
                         <usedDependency>com.mchange:c3p0</usedDependency>
                         <usedDependency>io.fixture:fixture-annotation</usedDependency>
                         <usedDependency>io.fixture:fixture-data-test</usedDependency>
+                        <usedDependency>org.hibernate:hibernate-ehcache</usedDependency>
                         <usedDependency>org.hibernate:hibernate-entitymanager</usedDependency>
                         <usedDependency>org.liquibase:liquibase-core</usedDependency>
                     </usedDependencies>
@@ -88,6 +89,11 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
