Added spring-data-rest and base configuration for repository mappings (needs to be secured at some point)

--- a/fixture-web/src/main/webapp/WEB-INF/web.xml
+++ b/fixture-web/src/main/webapp/WEB-INF/web.xml
@@ -71,4 +71,15 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>repositoryRestExporterServlet</servlet-name>
+        <servlet-class>org.springframework.data.rest.webmvc.RepositoryRestExporterServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>repositoryRestExporterServlet</servlet-name>
+        <url-pattern>/api/*</url-pattern>
+    </servlet-mapping>
+
 </web-app>
