--- a/fixture-parent/pom.xml
+++ b/fixture-parent/pom.xml
@@ -319,6 +319,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>cglib</groupId>
+                <artifactId>cglib-nodep</artifactId>
+                <version>${cglib.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
@@ -327,6 +332,11 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
                 <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.h2database</groupId>
@@ -542,6 +552,22 @@
                 <version>${spring-data-jpa.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-rest-webmvc</artifactId>
+                <version>${spring-data-rest.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <!-- spring-data-commons provides the necessary dependencies -->
+                        <groupId>org.springframework.data</groupId>
+                        <artifactId>spring-data-commons-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.hsqldb</groupId>
+                        <artifactId>hsqldb</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-config</artifactId>
                 <version>${spring-security.version}</version>
@@ -612,10 +638,12 @@
         <aspectj.version>1.7.3</aspectj.version>
         <bootswatch.version>2.3.1</bootswatch.version>
         <c3p0.version>0.9.2.1</c3p0.version>
+        <cglib.version>2.2.2</cglib.version>
         <cucumber.version>1.1.3</cucumber.version>
         <!-- TODO Remove this when cucumber > 1.1.3 -->
         <cucumber-html.version>0.2.3</cucumber-html.version>
         <font-awesome.version>3.2.1</font-awesome.version>
+        <guava.version>14.0.1</guava.version>
         <h2.version>1.3.172</h2.version>
         <hibernate.version>4.2.2.Final</hibernate.version>
         <hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
@@ -635,6 +663,7 @@
         <spring-asm.version>3.1.4.RELEASE</spring-asm.version>
         <spring-data-commons.version>1.5.1.RELEASE</spring-data-commons.version>
         <spring-data-jpa.version>1.3.2.RELEASE</spring-data-jpa.version>
+        <spring-data-rest.version>1.0.0.RELEASE</spring-data-rest.version>
         <spring-security.version>3.1.4.RELEASE</spring-security.version>
         <tiles.version>3.0.1</tiles.version>
     </properties>
