--- a/fixture-web/pom.xml
+++ b/fixture-web/pom.xml
@@ -27,6 +27,7 @@
                         <usedDependency>io.fixture:fixture-security</usedDependency>
                         <usedDependency>javax.servlet:jstl</usedDependency>
                         <usedDependency>org.apache.tiles:tiles-jsp</usedDependency>
+                        <usedDependency>org.springframework.data:spring-data-rest-webmvc</usedDependency>
                         <usedDependency>org.webjars:bootswatch</usedDependency>
                         <usedDependency>org.webjars:font-awesome</usedDependency>
                         <usedDependency>org.webjars:html5shiv</usedDependency>
@@ -142,6 +143,11 @@
             <artifactId>spring-webmvc</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-webmvc</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-jsp</artifactId>
             <scope>runtime</scope>
@@ -149,18 +155,22 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootswatch</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>font-awesome</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>html5shiv</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
