--- a/fixture-parent/pom.xml
+++ b/fixture-parent/pom.xml
@@ -190,6 +190,7 @@
                             </goals>
                             <phase>pre-integration-test</phase>
                             <configuration>
+                                <useTestClasspath>true</useTestClasspath>
                                 <fork>true</fork>
                             </configuration>
                         </execution>
